--- a/app/src/main/res/layout/home_folder_d.xml
+++ b/app/src/main/res/layout/home_folder_d.xml
@@ -4,18 +4,24 @@
         android:layout_height="wrap_content"
         xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <ListView
+    <ScrollView
             android:overScrollMode="never"
             android:layout_centerInParent="true"
             android:layout_marginStart="15dp"
             android:layout_marginTop="15dp"
             android:layout_marginEnd="15dp"
             android:layout_marginBottom="15dp"
-            android:id="@+id/home_folder_d_list_view"
-            android:scrollbars="none"
-            android:divider="@android:color/transparent"
-            android:dividerHeight="0dp"
+            android:id="@+id/home_folder_d_scroll_view"
             android:layout_width="200dp"
-            android:layout_height="136.5dp"/>
+            android:layout_height="150dp"
+            android:scrollbars="none">
+
+        <LinearLayout
+                android:orientation="vertical"
+                android:id="@+id/home_folder_d_list_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+    </ScrollView>
 
 </RelativeLayout>
