--- a/app/src/main/res/layout/home_wallpaper_d.xml
+++ b/app/src/main/res/layout/home_wallpaper_d.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:id="@+id/home_wallpaper_d"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+<RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/home_wallpaper_d"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
     <ImageView
+            android:layout_centerInParent="true"
             android:padding="10dp"
-            android:id="@+id/home_wallpaper_d_view"
+            android:id="@+id/home_wallpaper_d_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
