--- a/app/src/main/res/layout/linear_type_d.xml
+++ b/app/src/main/res/layout/linear_type_d.xml
@@ -1,13 +1,14 @@
-<RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/grid_type_a">
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:id="@+id/linear_type_d"
+              android:layout_marginBottom="20dp"
+              android:layout_marginEnd="20dp"
+              android:orientation="horizontal">
 
     <RelativeLayout
-            android:id="@+id/grid_type_a_frame"
-            android:layout_centerInParent="true"
-            android:layout_alignParentTop="true"
+            android:id="@+id/linear_type_d_frame"
             android:layout_width="100dp"
             android:layout_height="wrap_content">
 
@@ -17,24 +18,24 @@
                 android:layout_marginEnd="20dp"
                 android:layout_marginStart="20dp"
                 android:layout_centerHorizontal="true"
-                android:id="@+id/grid_type_a_icon"
+                android:id="@+id/linear_type_d_icon"
                 android:layout_width="50dp"
                 android:layout_height="50dp"/>
 
         <TextView
                 android:maxLines="1"
                 android:ellipsize="end"
-                android:layout_below="@+id/grid_type_a_icon"
+                android:layout_below="@+id/linear_type_d_icon"
                 android:layout_marginTop="20dp"
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp"
                 android:layout_marginBottom="20dp"
                 android:layout_centerHorizontal="true"
-                android:id="@+id/grid_type_a_text"
+                android:id="@+id/linear_type_d_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="15sp" />
 
     </RelativeLayout>
 
-</RelativeLayout>
+</LinearLayout>
