--- a/app/src/main/res/layout/settings_drawer_b.xml
+++ b/app/src/main/res/layout/settings_drawer_b.xml
@@ -109,16 +109,22 @@
             android:layout_height="wrap_content"
             android:textSize="15sp"/>
 
-    <ListView
+    <ScrollView
+            android:overScrollMode="never"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/settings_drawer_b_text_2"
             android:layout_marginTop="20dp"
-            android:overScrollMode="never"
-            android:scrollbars="none"
-            android:divider="@android:color/transparent"
-            android:dividerHeight="0dp"
-            android:id="@+id/settings_drawer_b_list_view"
+            android:id="@+id/settings_drawer_b_scroll_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:scrollbars="none">
+
+        <LinearLayout
+                android:orientation="vertical"
+                android:id="@+id/settings_drawer_b_list_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+    </ScrollView>
 
 </RelativeLayout>
