--- a/app/src/main/res/layout/settings_edge_b.xml
+++ b/app/src/main/res/layout/settings_edge_b.xml
@@ -6,7 +6,7 @@
 
     <ImageView
             android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
+            android:layout_alignStart="@+id/settings_edge_b_square"
             android:id="@+id/settings_edge_b_dot_1"
             android:layout_width="10dp"
             android:layout_height="10dp"/>
@@ -14,7 +14,7 @@
     <ImageView
             android:layout_marginTop="15dp"
             android:layout_below="@+id/settings_edge_b_dot_1"
-            android:layout_alignParentEnd="true"
+            android:layout_alignStart="@+id/settings_edge_b_square"
             android:rotation="0"
             android:id="@+id/settings_edge_b_cylinder_1"
             android:layout_width="25dp"
@@ -26,39 +26,39 @@
             android:layout_marginStart="10dp"
             android:layout_marginBottom="5dp"
             android:rotation="0"
-            android:layout_alignStart="@+id/settings_edge_b_cylinder_1"
+            android:layout_alignStart="@+id/settings_edge_b_square"
             android:id="@+id/settings_edge_b_line_1"
             android:layout_width="5dp"
             android:layout_height="50dp"/>
 
     <ImageView
+            android:layout_marginStart="15dp"
             android:layout_marginTop="10dp"
             android:layout_below="@+id/settings_edge_b_line_1"
-            android:layout_alignParentEnd="true"
+            android:layout_toEndOf="@+id/settings_edge_b_line_2"
             android:id="@+id/settings_edge_b_square"
             android:layout_width="25dp"
             android:layout_height="25dp"/>
 
     <ImageView
             android:layout_marginBottom="10dp"
-            android:layout_marginEnd="15dp"
-            android:layout_toStartOf="@+id/settings_edge_b_square"
+            android:layout_marginStart="15dp"
+            android:layout_toEndOf="@+id/settings_edge_b_cylinder_2"
             android:layout_alignBottom="@+id/settings_edge_b_square"
             android:id="@+id/settings_edge_b_line_2"
             android:layout_width="50dp"
             android:layout_height="5dp"/>
 
     <ImageView
-            android:layout_marginEnd="15dp"
-            android:layout_toStartOf="@+id/settings_edge_b_line_2"
+            android:layout_marginStart="15dp"
+            android:layout_toEndOf="@+id/settings_edge_b_dot_2"
             android:layout_alignBottom="@+id/settings_edge_b_square"
             android:id="@+id/settings_edge_b_cylinder_2"
             android:layout_width="50dp"
             android:layout_height="25dp"/>
 
     <ImageView
-            android:layout_marginEnd="15dp"
-            android:layout_toStartOf="@+id/settings_edge_b_cylinder_2"
+            android:layout_alignParentStart="true"
             android:layout_alignBottom="@+id/settings_edge_b_square"
             android:id="@+id/settings_edge_b_dot_2"
             android:layout_width="10dp"
