--- a/app/src/main/res/layout/settings_home_b.xml
+++ b/app/src/main/res/layout/settings_home_b.xml
@@ -103,18 +103,8 @@
 
     </RelativeLayout>
 
-    <TextView
-            android:maxLines="3"
-            android:ellipsize="end"
-            android:layout_below="@+id/settings_home_b_frame_3"
-            android:layout_marginTop="20dp"
-            android:layout_centerInParent="true"
-            android:id="@+id/settings_home_b_text_4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="15sp"/>
-
     <RelativeLayout
+            android:layout_alignParentTop="true"
             android:layout_above="@+id/settings_home_b_frame_3"
             android:layout_marginBottom="-5dp"
             android:layout_centerHorizontal="true"
@@ -122,30 +112,36 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
-        <ListView
-                android:layout_alignParentTop="true"
-                android:layout_alignParentStart="true"
-                android:layout_marginBottom="20dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="20dp"
+        <ScrollView
                 android:overScrollMode="never"
-                android:scrollbars="none"
-                android:divider="@android:color/transparent"
-                android:dividerHeight="0dp"
-                android:id="@+id/settings_home_b_list_view"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"/>
+                android:requiresFadingEdge="vertical"
+                android:fadingEdgeLength="10dp"
+                android:layout_marginTop="25dp"
+                android:layout_marginBottom="25dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_centerHorizontal="true"
+                android:id="@+id/settings_home_b_scroll_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scrollbars="none">
+
+            <LinearLayout
+                    android:orientation="vertical"
+                    android:id="@+id/settings_home_b_list_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+        </ScrollView>
 
     </RelativeLayout>
 
     <RelativeLayout
-            android:layout_above="@+id/settings_home_b_frame_3"
-            android:layout_marginBottom="-5dp"
+            android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:id="@+id/settings_home_b_frame_7"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
         <ImageView
                 android:layout_marginStart="20dp"
@@ -269,5 +265,16 @@
                 android:layout_height="50dp"/>
 
     </RelativeLayout>
+
+    <TextView
+            android:maxLines="3"
+            android:ellipsize="end"
+            android:layout_below="@+id/settings_home_b_frame_7"
+            android:layout_marginTop="20dp"
+            android:layout_centerInParent="true"
+            android:id="@+id/settings_home_b_text_4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="15sp"/>
 
 </RelativeLayout>
