--- a/app/src/main/res/layout/settings_tooltip.xml
+++ b/app/src/main/res/layout/settings_tooltip.xml
@@ -4,16 +4,26 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
-    <TextView
-            android:layout_marginBottom="5dp"
-            android:layout_marginTop="5dp"
+    <RelativeLayout
+            android:layout_alignParentStart="true"
             android:layout_centerInParent="true"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:id="@+id/settings_tooltip_text"
+            android:id="@+id/settings_tooltip_frame"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textStyle="normal"
-            android:textSize="20sp"/>
+            android:layout_height="wrap_content">
+
+        <TextView
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                android:layout_centerInParent="true"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:id="@+id/settings_tooltip_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"/>
+
+    </RelativeLayout>
 
 </RelativeLayout>
