--- a/app/src/main/res/layout/settings_home_e.xml
+++ b/app/src/main/res/layout/settings_home_e.xml
@@ -144,19 +144,26 @@
                 android:layout_height="wrap_content"
                 android:textSize="15sp"/>
 
-        <ListView
+        <ScrollView
+                android:overScrollMode="never"
                 android:layout_marginEnd="20dp"
                 android:layout_marginBottom="20dp"
                 android:layout_marginStart="20dp"
                 android:layout_alignParentStart="true"
                 android:layout_marginTop="20dp"
                 android:layout_below="@+id/settings_home_e_text_4"
-                android:scrollbars="none"
-                android:divider="@android:color/transparent"
-                android:dividerHeight="0dp"
-                android:id="@+id/settings_home_e_list_view"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"/>
+                android:id="@+id/settings_home_e_scroll_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scrollbars="none">
+
+            <LinearLayout
+                    android:orientation="vertical"
+                    android:id="@+id/settings_home_e_list_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+        </ScrollView>
 
     </RelativeLayout>
 
