--- a/app/src/main/res/layout/linear_type_f.xml
+++ b/app/src/main/res/layout/linear_type_f.xml
@@ -18,6 +18,15 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"/>
 
+        <TextView
+                android:id="@+id/linear_type_f_text"
+                android:layout_below="@+id/linear_type_f_icon"
+                android:visibility="gone"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
     </RelativeLayout>
 
 </LinearLayout>
