--- a/app/src/main/res/layout/additional_welcome.xml
+++ b/app/src/main/res/layout/additional_welcome.xml
@@ -153,9 +153,9 @@
             android:textSize="15sp"/>
 
     <TextView
+            android:layout_marginTop="15dp"
             android:layout_centerHorizontal="true"
-            android:layout_above="@+id/additional_welcome_text_7"
-            android:layout_marginBottom="3dp"
+            android:layout_below="@+id/additional_welcome_text_8"
             android:maxLines="1"
             android:id="@+id/additional_welcome_text_6"
             android:layout_width="wrap_content"
@@ -164,7 +164,8 @@
 
     <TextView
             android:layout_centerHorizontal="true"
-            android:layout_alignParentBottom="true"
+            android:layout_below="@+id/additional_welcome_text_6"
+            android:layout_marginTop="3dp"
             android:maxLines="1"
             android:ellipsize="end"
             android:id="@+id/additional_welcome_text_7"
