--- a/app/src/main/res/layout/home_shortcut_b.xml
+++ b/app/src/main/res/layout/home_shortcut_b.xml
@@ -26,8 +26,8 @@
             android:layout_alignParentStart="true"
             android:gravity="center"
             android:id="@+id/home_shortcut_b_frame_2"
-            android:layout_width="270dp"
-            android:layout_height="50dp">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
         <HorizontalScrollView
                 android:overScrollMode="never"
