--- a/app/src/main/res/layout/settings_misc_e.xml
+++ b/app/src/main/res/layout/settings_misc_e.xml
@@ -38,7 +38,7 @@
     <RelativeLayout
             android:layout_marginTop="20dp"
             android:layout_below="@+id/settings_misc_e_frame_1"
-            android:layout_alignParentStart="true"
+            android:layout_centerInParent="true"
             android:id="@+id/settings_misc_e_frame_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
