--- a/app/src/main/res/layout/settings_home_e.xml
+++ b/app/src/main/res/layout/settings_home_e.xml
@@ -144,6 +144,49 @@
                 android:layout_height="wrap_content"
                 android:textSize="15sp"/>
 
+        <RelativeLayout
+                android:layout_marginEnd="20dp"
+                android:layout_marginBottom="20dp"
+                android:layout_marginStart="20dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="20dp"
+                android:layout_below="@+id/settings_home_e_text_4"
+                android:id="@+id/settings_home_e_frame_7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+            <RelativeLayout
+                    android:layout_centerHorizontal="true"
+                    android:layout_alignParentTop="true"
+                    android:id="@+id/settings_home_e_frame_8"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                <ImageView
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_centerInParent="true"
+                        android:id="@+id/settings_home_e_icon_4"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"/>
+
+            </RelativeLayout>
+
+            <TextView
+                    android:layout_marginTop="10dp"
+                    android:layout_below="@+id/settings_home_e_frame_8"
+                    android:layout_centerHorizontal="true"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:id="@+id/settings_home_e_text_6"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="15sp"/>
+
+        </RelativeLayout>
+
         <ScrollView
                 android:overScrollMode="never"
                 android:layout_marginEnd="20dp"
