--- a/app/src/main/res/layout/settings_home_b.xml
+++ b/app/src/main/res/layout/settings_home_b.xml
@@ -54,50 +54,50 @@
                 android:layout_width="60dp"
                 android:layout_height="60dp" />
 
-    </RelativeLayout>
-
-    <RelativeLayout
-            android:layout_marginTop="20dp"
-            android:layout_below="@+id/settings_home_b_frame_1"
-            android:layout_centerInParent="true"
-            android:id="@+id/settings_home_b_frame_3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
         <RelativeLayout
-                android:layout_alignParentStart="true"
-                android:id="@+id/settings_home_b_frame_4"
-                android:layout_width="60dp"
-                android:layout_height="60dp">
-
-            <ImageView
-                    android:layout_centerInParent="true"
-                    android:id="@+id/settings_home_b_icon_1"
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"/>
-
-        </RelativeLayout>
-
-        <RelativeLayout
-                android:layout_marginTop="10dp"
-                android:layout_toEndOf="@+id/settings_home_b_frame_4"
-                android:layout_marginStart="20dp"
-                android:id="@+id/settings_home_b_frame_5"
+                android:layout_marginTop="20dp"
+                android:layout_below="@+id/settings_home_b_icon_2"
+                android:layout_centerInParent="true"
+                android:id="@+id/settings_home_b_frame_3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
-            <TextView
-                    android:ellipsize="end"
-                    android:maxLines="1"
-                    android:layout_marginBottom="10dp"
+            <RelativeLayout
+                    android:layout_alignParentStart="true"
+                    android:id="@+id/settings_home_b_frame_4"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp">
+
+                <ImageView
+                        android:layout_centerInParent="true"
+                        android:id="@+id/settings_home_b_icon_1"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"/>
+
+            </RelativeLayout>
+
+            <RelativeLayout
                     android:layout_marginTop="10dp"
-                    android:layout_marginEnd="15dp"
-                    android:layout_marginStart="15dp"
-                    android:layout_centerInParent="true"
-                    android:id="@+id/settings_home_b_text_3"
+                    android:layout_toEndOf="@+id/settings_home_b_frame_4"
+                    android:layout_marginStart="20dp"
+                    android:id="@+id/settings_home_b_frame_5"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="15sp"/>
+                    android:layout_height="wrap_content">
+
+                <TextView
+                        android:ellipsize="end"
+                        android:maxLines="1"
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginEnd="15dp"
+                        android:layout_marginStart="15dp"
+                        android:layout_centerInParent="true"
+                        android:id="@+id/settings_home_b_text_3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="15sp"/>
+
+            </RelativeLayout>
 
         </RelativeLayout>
 
@@ -105,21 +105,28 @@
 
     <RelativeLayout
             android:layout_alignParentTop="true"
-            android:layout_above="@+id/settings_home_b_frame_3"
-            android:layout_marginBottom="-5dp"
             android:layout_centerHorizontal="true"
             android:id="@+id/settings_home_b_frame_6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
+        <ImageView
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="25dp"
+                android:layout_centerInParent="true"
+                android:id="@+id/settings_home_b_icon_7"
+                android:layout_width="50dp"
+                android:layout_height="50dp" />
+
         <ScrollView
                 android:overScrollMode="never"
                 android:requiresFadingEdge="vertical"
                 android:fadingEdgeLength="10dp"
-                android:layout_marginTop="25dp"
+                android:layout_marginTop="15dp"
                 android:layout_marginBottom="25dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
+                android:layout_below="@+id/settings_home_b_icon_7"
                 android:layout_centerHorizontal="true"
                 android:id="@+id/settings_home_b_scroll_view"
                 android:layout_width="match_parent"
